moved render functions into seperate classes

--- a/D3D12Demo/D3D12Demo.vcxproj
+++ b/D3D12Demo/D3D12Demo.vcxproj
@@ -147,9 +147,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ComputeStage.cpp" />
     <ClCompile Include="GameStateHandler.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PassThroughStage.cpp" />
     <ClCompile Include="Project.cpp" />
+    <ClCompile Include="RenderStage.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="CS_TestShader.hlsl">
@@ -234,7 +237,11 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ComputeStage.hpp" />
     <ClInclude Include="GameStateHandler.hpp" />
+    <ClInclude Include="GPUStage.hpp" />
+    <ClInclude Include="PassThroughStage.hpp" />
+    <ClInclude Include="RenderStage.hpp" />
     <ClInclude Include="StructsAndEnums.hpp" />
     <ClInclude Include="ConstantsAndGlobals.hpp" />
     <ClInclude Include="main.hpp" />
