Added working wvp and stanford dragon as .h

--- a/D3D12Demo/D3D12Demo.vcxproj
+++ b/D3D12Demo/D3D12Demo.vcxproj
@@ -253,6 +253,7 @@
     <ClInclude Include="ComputeStage.hpp" />
     <ClInclude Include="GameStateHandler.hpp" />
     <ClInclude Include="GPUStage.hpp" />
+    <ClInclude Include="DragonTriangles.h" />
     <ClInclude Include="RenderStage.hpp" />
     <ClInclude Include="StructsAndEnums.hpp" />
     <ClInclude Include="ConstantsAndGlobals.hpp" />
