--- a/D3D12Demo/D3D12Demo.vcxproj
+++ b/D3D12Demo/D3D12Demo.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ComputeStage.cpp" />
+    <ClCompile Include="D3D12Timer.cpp" />
     <ClCompile Include="GameStateHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Project.cpp" />
@@ -251,6 +252,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ComputeStage.hpp" />
+    <ClInclude Include="D3D12Timer.h" />
     <ClInclude Include="GameStateHandler.hpp" />
     <ClInclude Include="GPUStage.hpp" />
     <ClInclude Include="RenderStage.hpp" />
